[tool.poetry]
name = "pyckish"
version = "0.7.4"
description = "Pyckish is a micro framework for creating AWS Lambdas in Python in beautiful manner."
authors = ["Pedro Dardengo <pedrodardengo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pydantic = "^1.9"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"